feat: :sparkles: recycle and add info api
